--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -15,9 +15,6 @@
   font-family: 'Manrope';
 }
 
-.card-container:hover {
-}
-
 .card-container h2 {
   margin: 15px 0;
 }
